--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 				<div class="header_navigation">
 					<a href="#" class="logo">FitApp</a>
 					<nav class="navigation">        <!--никак не смогла сделать меню белым. Не пойму, где перекрывается свойство-->
+					<!--ffffff-->
 						<ul>
 							<li><a href="#">About</a></li>
 							<li><a href="#">Features</a></li>
 							<li><a href="#">Reviews</a></li>
-							<li><a href="#">Blog</a></li>	
+							<li><a href="#">Blog</a></li>
 							<li><a href="#">Support</a></li>
 							<li><a href="#" class="butten_app">Get App</a></li>
 						</ul>
